# domainportfolio

./: README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
client/src/: App.tsx  index.css
client/src/components/: category-card.tsx  site-footer.tsx  testimonial-card.tsx
